2007-12-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interface/R/igraph/R/CohesiveBlocks.R (layout.byblock, dyadAsymmetry) :
	removed
	(cohesive.blocks, recalc.tree.bgraph, print.bgraph, plot.bgraph) :
	many small modifications
	(is.bgraph) : added
	
	* interfaces/R/igraph/R/CohesiveBlocks.R 
	* interfaces/R/igraph/R/layout.R (layout.mds, layout.svd)
	(piecewise.layout) : moved

2007-12-13  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/CohesiveBlocks.R (cohesive.blocks)
	(recalc.tree.bgraph, print.bgraph, plot.bgraph, max.cohesion)
	(plot.kCore.bgraph, write.pajek.bgraph, write.pajek.kCore.bgraph)
	(piecewise.layout, expand.layout, layout.byblock, dyadAsymmetry) : added 

	* interfaces/R/igraph/R/iterators.R ($.igraph, $<-.igraph) : added

	* interfaces/R/igraph/R/print.R (print.igraph) : use the 'print' method
	of complex attributes

2007-10-17  Gabor Csardi  <csardi@rmki.kfki.hu>
  
	* interfaces/R/src/rinterface.c.in (R_igraph_vectorlist_to_SEXP)
	(R_igraph_vectorlist_destroy) : added

2007-08-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/src/rinterface.c
	(R_igraph_attribute_get_string_vertex_attr)
	(R_igraph_attribute_get_string_edge_attr)
	(R_igraph_SEXP_to_strvector) : updates, CHAR() returns const char * 
	in recent R versions

	* interfaces/R/DESCRIPTION.in: suggest tcltk

2007-07-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/community.R (walktrap.community) : bug 
	corrected for weighted graphs

2007-07-17  Csardi Gabor  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : corrected bug when
	igraph.Arrows called with a vector argument for h.lwd

2007-06-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_write_graph_pajek) : 
	open file in binary format if we don't have open_memstream 

	* interfaces/R/igraph/R/layout.R (layout.reingold.tilford)
	* interfaces/R/src/rinterface.c (R_igraph_layout_reingold_tilford) :
	circular argument added	
